syntax = "proto3";
package sunrise.liquiditypool.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/sunriselayer/sunrise/x/liquiditypool/types";

// AccumulatorObject
message AccumulatorObject {
  string name = 1;
  repeated cosmos.base.v1beta1.DecCoin accum_value = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
  string total_shares = 3 [(cosmos_proto.scalar) = "cosmos.Dec"];
}

// AccumulatorPosition
message AccumulatorPosition {
  string name = 1;
  string index = 2;
  string num_shares = 3 [(cosmos_proto.scalar) = "cosmos.Dec"];
  repeated cosmos.base.v1beta1.DecCoin accum_value_per_share = 4 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.DecCoin unclaimed_rewards_total = 5 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
}
