syntax = "proto3";

package sunrise.shareclass.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "sunrise/shareclass/v1/params.proto";

option go_package = "github.com/sunriselayer/sunrise/x/shareclass/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams        (MsgUpdateParams       ) returns (MsgUpdateParamsResponse       );
  rpc NonVotingDelegate   (MsgNonVotingDelegate  ) returns (MsgNonVotingDelegateResponse  );
  rpc NonVotingUndelegate (MsgNonVotingUndelegate) returns (MsgNonVotingUndelegateResponse);
  rpc ClaimRewards        (MsgClaimRewards       ) returns (MsgClaimRewardsResponse       );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                            "authority";
  option           (amino.name) = "sunrise/x/shareclass/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgNonVotingDelegate {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
}

message MsgNonVotingDelegateResponse {}

message MsgNonVotingUndelegate {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
}

message MsgNonVotingUndelegateResponse {}

message MsgClaimRewards {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
}

message MsgClaimRewardsResponse {}

